Fixing errors with the body height whereby an overflow would occur on the aside tag hiding it's content by setting an overflow-y of auto on the body and adding the Norse-Bold font-family

--- a/smaller-screen-style.css
+++ b/smaller-screen-style.css
@@ -1,8 +1,10 @@
 @media(width <= 78rem){
     body{
         grid-template-columns: 1fr;
-        grid-template-rows: minmax(0, 30rem)
+        grid-template-rows: minmax(15rem, 30rem)
                             minmax(60rem, 1fr);
+
+        overflow-y: auto;
     }
 
     aside{
